plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
//    id 'net.minecraftforge.gradle' version '6.+'
    id 'net.neoforged.moddev.legacyforge' version '2.0.141'
//    id 'net.neoforged.moddev' version '1.0.11'
//    id 'org.spongepowered.mixin' version '0.7.+'
}
//apply plugin: 'org.spongepowered.mixin'


version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

// Build Incremental Versioning
// gets a unique build number based on the day and the hour of the day
version = version + '_build-' + new Date().format('M.D.HH')

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"


legacyForge {
    // Develop against MinecraftForge version 47.3.0 for 1.20.1 (the versions can be found at https://files.minecraftforge.net/)
    version = "1.20.1-47.4.20"

    // Validate AT files and raise errors when they have invalid targets
    // This option is false by default, but turning it on is recommended
    validateAccessTransformers = true

    parchment {
        minecraftVersion = "1.20.1"
        mappingsVersion = "2023.09.03"
    }

    runs {
        client {
            client()
        }
        data {
            data()
            programArguments.addAll('--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath())
        }
        server {
            server()
        }
        configureEach {
//            programArguments.addAll( '--enable-native-access=com.sun.jna', '--enable-native-access=org.lwjgl', '--enable-native-access=org.lwjgl.stb', '--enable-native-access=aaa_particles', '--enable-native-access=org.lwjgl.opengl')
            // Enable debug logging for the console logger to help with development
            systemProperty ('forge.logging.console.level', 'debug')
        }
    }

    mods {
        "realmengine" {
            sourceSet sourceSets.main
        }
    }
}

repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you
//    maven {
//        url "https://jitpack.io"
//    }
    maven {
        name = "jtd releases"
        url = "https://maven.jt-dev.tech/releases"
    }
    maven {
        name = "jtd snapshots"
        url = "https://maven.jt-dev.tech/snapshots"
    }
    maven {
        name = "tterrag maven"
        url = "https://maven.tterrag.com/"
    }
    maven {
        url = 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Apotheosis Maven"
        url = "https://maven.shadowsoffire.dev/releases"
    }
}

dependencies {

    // MixinExtras because I forgor :sob:
    modCompileOnly("io.github.llamalad7:mixinextras-common:0.5.4")
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.4")){
        version {
            strictly '[0.5.4, 1.0)'
            prefer '0.5.4'
        }
    }
    // Curios
//    modCompileOnly("top.theillusivec4.curios:curios-forge:5.14.1+1.20.1") // API only for dev
//    modRuntimeOnly("top.theillusivec4.curios:curios-forge:5.14.1+1.20.1") // Full artifact for testing
    modImplementation("curse.maven:curios-309927:6418456") // Full artifact for testing

    modImplementation("curse.maven:caelus-308989:5281700")
    modImplementation("dev.shadowsoffire:Placebo:1.20.1-8.6.3")

    modImplementation("dev.shadowsoffire:ApothicAttributes:1.20.1-1.3.7")

    // For future migrations over to RE
    modImplementation("curse.maven:origins-forge-474438:5314209")
    modImplementation("curse.maven:apugli-579886:5635683")
    modImplementation("curse.maven:apoli-forge-975561:5404008")
    modImplementation("curse.maven:calio-977891:5404005")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html


    //annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'
    testAnnotationProcessor 'org.spongepowered:mixin:0.8.7:processor'

}
mixin {
    // MixinGradle Settings
    add sourceSets.main, 'realmengine.refmap.json'
    config 'mixins.realmengine.json'
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
    duplicatesStrategy(DuplicatesStrategy.INCLUDE)
}

// Example for how to get properties into the manifest for reading at runtime.
tasks.named('jar', Jar).configure {

    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs": "mixins.bisccel.json"
        ])
    }

    // This is the preferred method to reobfuscate your jar file
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
